apps/radarr/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
        # - name: config
        #   nfs:
        #     path: "/k8s-volumes/persistent/radarr/config"
        #     server: 192.168.1.2
        - name: config
          iscsi:
            targetPortal: 192.168.1.2:3260
            iqn: iqn.2004-04.com.qnap:ts-453bmini:iscsi.cygnus.0bed79
            lun: 2
            fsType: ext4
            readOnly: false
        - name: persistent-data
          nfs:
            path: "/k8s-volumes/persistent/plex/data"
            server: 192.168.1.2
        - name: ephemeral-data
          nfs:
            path: "/k8s-volumes/ephemeral/plex/data"
            server: 192.168.1.2
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:4.1.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "8Gi"
              cpu: "4"
          readinessProbe:
            httpGet:
              port: 7878
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 7878
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 7878
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: persistent-data
              mountPath: /persistent-data
              readOnly: false
            - name: ephemeral-data
              mountPath: /ephemeral-data
              readOnly: false
