apps/radarr/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - name: web
      protocol: TCP
      port: 7878
      targetPort: 7878
